--- a/app/views/sql_probe/events/show.erb
+++ b/app/views/sql_probe/events/show.erb
@@ -1,45 +1,47 @@
 <% content_for :head do %>
-<style>
+  <style>
 /* 
    Remove dark gray striped background in timeline
-   @see http://stackoverflow.com/a/39045621/613772
-*/
+ @see http://stackoverflow.com/a/39045621/613772
+ */
 svg g:first-of-type path {
-    stroke: #e6e6e6;
+  stroke: #e6e6e6;
 }
 svg g:first-of-type rect:not(:last-child) {
-    fill: #ffffff;
+  fill: #ffffff;
 }
-</style>
+  </style>
 <% end %>
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <div class="btn-group pull-right" role="group" aria-label="...">
-      <%= link_to 'View Raw Data', view_raw_path(path: params[:path]), class: 'btn btn-default btn-xs' %>
-      <%= link_to 'Download', download_raw_path(path: params[:path]), class: 'btn btn-default btn-xs' %>
+<div class="container-fluid">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <div class="btn-group pull-right" role="group" aria-label="...">
+        <%= link_to 'View Raw Data', view_raw_path(path: params[:path]), class: 'btn btn-default btn-xs' %>
+        <%= link_to 'Download', download_raw_path(path: params[:path]), class: 'btn btn-default btn-xs' %>
+      </div>
+      <h3 class="panel-title">Timeline
+        <small>Select a timeline block to view full query, backtrace and source browser.</small>
+      </h3>
     </div>
-    <h3 class="panel-title">Timeline
-      <small>Select a timeline block to view full query, backtrace and source browser.</small>
-    </h3>
+    <div id="timeline"><div class="padding">Loading...</div></div>
   </div>
-  <div id="timeline"><div class="padding">Loading...</div></div>
-</div>
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">General Action Info</h3>
-  </div>
-  <div class="panel-body">
-    <div class="text-pre"><%= JSON.pretty_generate @event.except('events', 'consolidated') %></div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">General Action Info</h3>
+    </div>
+    <div class="panel-body">
+      <div class="text-pre"><%= JSON.pretty_generate @event.except('events', 'consolidated') %></div>
+    </div>
   </div>
 </div>
 
 <%= render 'details' %>
 
 <% content_for :javascript do %>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script>
 window.sqlEventData = <%= raw @event['events'].to_json %>;
 
 (function() {
@@ -79,8 +81,8 @@ window.sqlEventData = <%= raw @event['events'].to_json %>;
 
   $(document).ready(function() {
     <%# EventDetailDialog.show(sqlEventData[0]); %>
-    loadTimeline();
+      loadTimeline();
   });
 })();
-</script>
+  </script>
 <% end %>
