--- a/app/views/sql_probe/live/index.erb
+++ b/app/views/sql_probe/live/index.erb
@@ -1,8 +1,29 @@
-<%= content_for :javascript do %>
+<%= content_for :head do %>
+  <style>
+  body {
+    padding-top: 51px;
+  }
+  </style>
+<% end %>
+
+<div class='split split-first'>
+  <%= react_component 'Live',
+    live_feed_path: live_feed_path,
+    event_path: event_path(path: 'PATH')
+  %>
+</div>
+<div class='split split-last'>
+</div>
+
+<% content_for :javascript do %>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
   <script>
-SqlProbe.initLive($('#output'), <%= raw event_path(path: 'PATH').to_json %>);
+Split(['.split-first', '.split-last'], {
+  sizes: [75, 25],
+  gutterSize: 2,
+  cursor: 'col-resize'
+})
   </script>
 <% end %>
 
-<div id='output'>
-</div>
