--- a/app/views/sql_probe/live/index.erb
+++ b/app/views/sql_probe/live/index.erb
@@ -6,23 +6,34 @@
   </style>
 <% end %>
 
-<div class='split split-first'>
-  <%= react_component 'Live',
-    live_feed_path: live_feed_path,
-    event_path: event_path(path: 'PATH')
-  %>
+<div class='split split-horizontal split-a'>
+  <div class='split split-vertical split-c'>
+    <%= react_component 'RequestTimeline' %>
+  </div>
+  <div class='split split-vertical split-d table-responsive'>
+    <%= react_component 'RequestTable' %>
+  </div>
 </div>
-<div class='split split-last'>
+<div class='split split-horizontal split-b'>
 </div>
 
 <% content_for :javascript do %>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
   <script>
-Split(['.split-first', '.split-last'], {
-  sizes: [75, 25],
-  gutterSize: 2,
+window.SQL_PROBE_CONFIG = <%= raw({ live_feed_path: live_feed_path,
+                                    event_path: event_path(path: 'PATH')
+                                  }.to_json) %>
+
+Split(['.split-a', '.split-b'], {
+  sizes: [50,50],
+  gutterSize: 3,
   cursor: 'col-resize'
+})
+Split(['.split-c', '.split-d'], {
+  sizes: [50,50],
+  direction: 'vertical',
+  gutterSize: 3,
+  cursor: 'row-resize'
 })
   </script>
 <% end %>
