Use custom events to remove duplicate ws listners

--- a/app/views/sql_probe/live/index.erb
+++ b/app/views/sql_probe/live/index.erb
@@ -35,6 +35,8 @@ Split(['.split-c', '.split-d'], {
   gutterSize: 3,
   cursor: 'row-resize'
 })
+
+LiveFeed.start(<%= raw live_feed_path.to_json %>);
   </script>
 <% end %>
 
