--- a/app/views/layouts/sql_probe/sql_probe.html.erb
+++ b/app/views/layouts/sql_probe/sql_probe.html.erb
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<%= render 'layouts/sql_probe/navbar' %>
+<%= render 'layouts/sql_probe/navbar' unless @disable_top_navbar %>
 
 <%= yield %>
 
