--- a/app/views/sql_probe/live/index.erb
+++ b/app/views/sql_probe/live/index.erb
@@ -17,10 +17,10 @@ body {
       <h3>Request Timeline <small>(select timeline block or row to load right split)</small></h3>
     </div>
     <div class='split-body'>
-      <div class='split split-vertical split-c'>
+      <div class='split split-vertical split-aa'>
         <%= react_component 'RequestTimeline', {}, class: 'full-size' %>
       </div>
-      <div class='split split-vertical split-d table-responsive'>
+      <div class='split split-vertical split-ab table-responsive'>
         <%= react_component 'RequestTable', {}, class: 'full-size' %>
       </div>
     </div>
@@ -33,14 +33,14 @@ body {
 <% content_for :javascript do %>
   <script>
 Split(['.split-a', '.split-b'], {
-  sizes: [50,50],
+  sizes: [50, 50],
   gutterSize: 3,
   cursor: 'col-resize',
   onDrag: function() {
     document.dispatchEvent(new Event('split.resize'));
   }
 })
-Split(['.split-c', '.split-d'], {
+Split(['.split-aa', '.split-ab'], {
   sizes: [50,50],
   direction: 'vertical',
   gutterSize: 3,
