--- a/app/views/sql_probe/live/index.erb
+++ b/app/views/sql_probe/live/index.erb
@@ -9,25 +9,23 @@ body {
 <% end %>
 
 <div class='split split-horizontal split-a text-smallest'>
-  <div class='split-with-heading'>
+  <div class='split split-vertical split-aa split-panel'>
     <div class='split-head'>
       <div class='split-head-buttons pull-right'>
         <%# <button class='btn btn-xs'>Clear</button> %>
       </div>
       <h3>Request Timeline <small>(select timeline block or row to load right split)</small></h3>
     </div>
-    <div class='split-body'>
-      <div class='split split-vertical split-aa'>
-        <%= react_component 'RequestTimeline', {}, class: 'full-size' %>
-      </div>
-      <div class='split split-vertical split-ab table-responsive'>
-        <%= react_component 'RequestTable', {}, class: 'full-size' %>
-      </div>
+    <div class='split-body' style='overflow: hidden'>
+      <%= react_component 'RequestTimeline', {}, class: 'full-size' %>
     </div>
+  </div>
+  <div class='split split-vertical split-ab table-responsive'>
+    <%= react_component 'RequestTable', {}, class: 'full-size' %>
   </div>
 </div>
 <div class='split split-horizontal split-b text-smallest'>
-  <%= react_component 'SqlTimeline', {}, class:'full-size' %>
+  <%= react_component 'SqlTimeline', {}, class: 'full-size' %>
 </div>
 
 <% content_for :javascript do %>
