--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body style="zoom: 1;">
+  <%= link_to 'Probe*', '/sql_probe/live', target: 'sql_probe/live' %>
 <%= yield %>
 </body>
 </html>
