--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body style="zoom: 1;">
+  <%= link_to 'Open SQL Probe', '/sql_probe', target: 'sql_probe' %>  
 <%= yield %>
 </body>
 </html>
