--- a/client/src/components/EventsSummary/Breakdown.css
+++ b/client/src/components/EventsSummary/Breakdown.css
@@ -1,47 +1,56 @@
 .Breakdown {
+  max-height: calc(100% - 48px);
   padding: 24px;
-}
-
-.Breakdown-item {
-  vertical-align: top;
+  position: relative;
+  width: 475px;
+  overflow: hidden;
 }
 
 .Breakdown-graphContainer {
+  display: inline-block;
   width: 150px;
   height: 150px;
 }
 
-.Breakdown-value,
-.Breakdown-label {
-  padding: 4px;
+.Breakdown-table {
+  display: inline-block;
+  position: absolute;
+  max-height: 100%;
+  overflow-y: auto;
+  padding: 20px 0px;
+  box-shadow: inset 0 0px 30px 5px white;
   font-size: 12px;
+  width: 300px;
+}
+
+.Breakdown-item {
+  position: relative;
+  vertical-align: top;
+  width: 300px;
+  padding-bottom: 8px;
+  z-index: -1;
 }
 
 .Breakdown-label {
-  max-width: 250px;
+  display: inline-block;
+  vertical-align: top;
+  width: 180px;
 }
 
 .Breakdown-value {
+  display: inline-block;
   text-align: right;
-  padding-left: 8px;
+  vertical-align: top;
+  white-space: nowrap;
+  width: 70px;
 }
 
 .Breakdown-box {
-  position: relative;
-  margin-top: 2px;
+  display: inline-block;
+  margin: -2px 8px 0 8px;
   width: 16px;
   height: 16px;
   background-color: currentColor;
-}
-
-.Breakdown-box::after {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border: 1px solid black;
-  opacity: 0.25;
+  vertical-align: middle;
+  border: 1px solid rgba(0, 0, 0, 0.3);
 }
